# manuk

./: .env.example  .gitignore  0  CLAUDE.MD  CONSTITUTION.MD  Cargo.toml  ENGINEERING.MD  IMPLEMENTATION.md  INFERENCE.MD  KICKOFF_RESEARCH_IMPL_2.MD  PARITY-LEDGER.MD  PARITY-LEDGER.md  PLATFORM.md  README.md  RESEARCH.MD  RESEARCH_V2_DIR.MD  STATUS.md
.cargo/: config.toml
.github/workflows/: ci.yml  demo.yml  release.yml
agent/: Cargo.toml
agent/src/: automation.rs  cache.rs  capabilities.rs  concurrency.rs  env.rs  forms.rs  groq.rs  grounding.rs  lib.rs  local.rs  model_manifest.rs  observation_policy.rs  replay.rs  targeting.rs  translate.rs  traversal.rs  triage.rs
bench/: BASELINE.md
bidi/: Cargo.toml
bidi/src/: lib.rs  protocol.rs  server.rs
bidi/tests/: websocket.rs
bidi/tests/puppeteer/: README.md  drive.mjs
demo/: Cargo.toml
demo/src/: lib.rs
demo/www/: .gitignore  index.html  pages.json
demo/www/pages/: angular.html  apache.html  arstechnica.html  astro.html  bbc.html  bootstrap.html  bulma.html  chakra.html  cloudflare.html  craigslist.html  figma-blog.html  gnu.html  guardian.html  hackernews.html  kernel-org.html  linear.html  lobsters.html  mdn-css.html  mui.html  netlify.html  nextjs.html  nuxt.html  openai.html  pgdocs.html  python-docs.html  react.html  remix.html  rustlang.html  solid.html  sqlite.html  stripe-docs.html  svelte.html  tailwind.html  vercel.html  vite.html  vuejs.html  w3c.html  wikipedia.html  xkcd.html
docs/: ENGINEERING-SYNTHESIS.md  PROJECT-STATE-AND-VISION.md  SPEC.md  sample.html
docs/bench/: corpus.txt  g5-scenarios.txt  large.html  mid.html  oracle-corpus.txt
docs/loop/: AGENTIC-PHASES-PLAN.md  AUTOLOOP  CADENCE.md  CADENCE.tsv  CAPABILITIES.md  CLUSTERS.md  CONSTELLATION.md  CONSTELLATION.tsv  CONSTITUTION-CHECK.md  CONSTITUTION.md  DAILY-DRIVER-EDGES.md  DECISIONS.md  DEEP-RESEARCH-PROMPT.md  DEMO.md  EPOCH-1.md  GRIND.md  (+50 more)
engine/a11y/: Cargo.toml
engine/a11y/src/: lib.rs
engine/compositor/: Cargo.toml
engine/compositor/src/: lib.rs
engine/css/: Cargo.toml
engine/css/src/: lib.rs  stylo_dom.rs  stylo_engine.rs  stylo_map.rs  stylo_probe.rs  stylo_traits.rs  values.rs
engine/css/tests/: fuzz.rs
engine/dom/: Cargo.toml
engine/dom/src/: history.rs  lib.rs
engine/html/: Cargo.toml
engine/html/src/: lib.rs  sink.rs
engine/html/tests/: fuzz.rs
engine/js/: Cargo.toml
engine/js/src/: attrs_js.rs  bindings_prototype.rs  canvas.rs  collections_js.rs  dom_bindings.rs  event_loop.rs  history_bindings.rs  history_host.rs  iframe_js.rs  inline_handlers_js.rs  job_queue.rs  lib.rs  mse_js.rs  mutation_js.rs  range_js.rs  reflect_js.rs  reflect_table.rs  spidermonkey.rs  traversal_js.rs
engine/layout/: Cargo.toml
engine/layout/src/: flex.rs  lib.rs  taffy_tree.rs
engine/media/: Cargo.toml
engine/media/src/: audio.rs  av1.rs  avif.rs  lib.rs  playback.rs  video.rs  vtt.rs
engine/media/tests/: audio_decode.rs  av1_decode.rs  av_sync.rs  avif_alpha.rs  demux.rs  g_video_player.rs  mp3_decode.rs  playback_clock.rs  video_decode.rs  vtt_captions.rs
engine/media/tests/data/: README.md
engine/net/: Cargo.toml
engine/net/src/: blocker.rs  cachestorage.rs  cookies.rs  cors.rs  csp.rs  downloads.rs  idb.rs  lib.rs  multipart.rs  proxy.rs  storage.rs  websocket.rs  webstorage.rs
engine/page/: Cargo.toml
engine/page/benches/: pipeline.rs
engine/page/src/: lib.rs
engine/page/tests/: g_a11y_roles.rs  g_a11y_state.rs  g_abortsignal_any.rs  g_abspos_static_ifc.rs  g_active_element_body_default.rs  g_active_pseudo.rs  g_alloc.rs  g_anchor_url_setters.rs  g_animation.rs  g_attr_case.rs  g_attrs.rs  g_blob_binary.rs  g_blob_stream.rs  g_blob_url.rs  g_cache_api.rs  g_canvas.rs  g_canvas_conic.rs  g_canvas_gradient.rs  g_canvas_image.rs  g_canvas_image_data.rs  g_canvas_pattern.rs  g_canvas_text.rs  g_capability.rs  g_caption_paint.rs  g_ce_attr_changed.rs  g_ch_unit.rs  g_characterdata_iface.rs  g_chardata.rs  g_check_visibility.rs  g_class_ascii_whitespace.rs  g_classlist.rs  g_clean_exit.rs  g_click_activation.rs  g_client_rects.rs  g_clipboard_image.rs  g_clipboard_image_write.rs  g_clipboard_read.rs  g_collection_iterator_indices.rs  g_collection_named_props.rs  g_collections.rs  (+221 more)
engine/paint/: Cargo.toml
engine/paint/src/: lib.rs
engine/text/: Cargo.toml
engine/text/src/: lib.rs  woff2.rs
engine/text/tests/: g_bidi_base_direction.rs  g_complex_script.rs  probe_script_fallback.rs
packaging/: README.md  manuk.desktop
scripts/: agent-stream.sh  autoloop.sh  bank-release.sh  blindspot.sh  cadence-backfill.py  cadence-report.py  ci-gate.sh  ci-run.sh  cold-read.sh  constellation.sh  constitution-check.sh  coupling.py  crawl-report.sh  demo-build.sh  demo-pages.sh  demo-verify.py  disk-hygiene.sh  falsify.sh  fidelity-report.sh  fidelity-sweep.sh  gate-sweep.sh  lever-board.sh  lever-pivot.sh  loop-continue.sh  loop-daemon.sh  loop-forever.sh  loop-watchdog.sh  mem-guard.sh  observer-run.sh  oracle-crawl.sh  orient.sh  phase0-progress.sh  ramdisk.sh  ratchet.sh  recon.sh  self-audit.sh  setup-local-model.sh  snap.sh  spa-mine.sh  status-update.sh  (+15 more)
shell/: Cargo.toml
shell/src/: audio.rs  chrome.rs  find.rs  gui.rs  main.rs  media.rs  panel.rs  prerender.rs  session.rs  tab.rs  visited.rs
shell/tests/: g_teardown.rs
store/: Cargo.toml
store/src/: history_index.rs  lib.rs
tests/wpt/: Cargo.toml  README.md
tests/wpt/corpus/: README.md  abs-stretch.html  align-self.html  block-flow.html  box-model.html  calc-ops.html  calc-width.html  flex-align.html  flex-basis.html  flex-column.html  flex-gap.html  flex-grow.html  flex-row.html  flex-wrap.html  grid-adv.html  grid-basic.html  grid-gap.html  img-sizing.html  inline-flow.html  inline-pad.html  min-max.html  neg-margin.html  nested-flex.html  percent-height.html  positioning.html  table-adv.html  text-align-right.html  transform-ops.html  transform-translate.html  valign.html  white-space-nowrap.html
tests/wpt/src/: bench.rs  chrome.rs  fidelity.rs  harness.rs  interact.rs  lib.rs  main.rs  oracle.rs  parity.rs  reftest.rs
(+58 files in other folders)
