[package]
name = "manuk-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Human-operator GUI shell: window, tabs, navigation, and the page pipeline."

[[bin]]
name = "manuk"
path = "src/main.rs"

[features]
# The interactive GPU window (winit + wgpu). On by default. Disable it
# (`--no-default-features`) to build just the headless `render` pipeline, which
# needs no display/GPU — useful for CI and this environment.
default = ["gui", "stylo", "spidermonkey"]
gui = ["dep:winit", "dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:raw-window-handle", "dep:arboard"]
# Route the cascade through the real Stylo engine (full selectors/@media/var/cascade;
# 72/72 parity). Default-on for real-world CSS fidelity, with a per-page panic fallback
# to MinimalCascade. Heavy to build; drop with --no-default-features for the lean path.
stylo = ["manuk-page/stylo"]
# Link SpiderMonkey and expose `manuk eval <expr>` — real JS execution. Heavy: this is
# what the C2 binary-size measurement compares against the JS-less baseline.
# `_sm` is the internal code marker (shared by both variants); `spidermonkey-noicu` is
# the C2 ICU-trimmed build (from-source, no `intl`/ICU — see engine/js/Cargo.toml).
_sm = []
spidermonkey = ["_sm", "manuk-js/spidermonkey", "manuk-page/spidermonkey"]
spidermonkey-noicu = ["_sm", "manuk-js/spidermonkey-noicu", "manuk-page/spidermonkey-noicu"]

[dependencies]
manuk-net.workspace = true
manuk-html.workspace = true
manuk-dom.workspace = true
manuk-css.workspace = true
manuk-layout.workspace = true
manuk-text.workspace = true
manuk-js.workspace = true
manuk-paint.workspace = true
manuk-compositor.workspace = true
manuk-page.workspace = true
manuk-agent.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
url.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# Only used to exit hard past SpiderMonkey's crashing static/atexit teardown.
libc = "0.2"

# System clipboard (Ctrl+C/V/X). Optional, pulled with the GUI.
arboard = { version = "3", optional = true }
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
