[package]
name = "manuk-css"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Style engine. Trait boundary + minimal cascade fallback; Stylo feature-gated."

[features]
default = []
# Stylo (Servo/Firefox production CSS engine) is the reuse target per CLAUDE.md.
# It is heavy to build, so it is opt-in. The default build uses the minimal
# from-scratch cascade so the workspace compiles and runs without it.
stylo = ["dep:stylo", "dep:url", "dep:euclid", "dep:selectors", "dep:stylo_dom", "dep:app_units", "dep:stylo_static_prefs"]

[dependencies]
manuk-dom.workspace = true
cssparser.workspace = true
smallvec.workspace = true
tracing.workspace = true

# Feature-gated. Pulled only with --features stylo. Name/version adjusted on wiring.
stylo = { package = "stylo", version = "0.19", optional = true }
# Needed to construct Stylo's UrlExtraData + servo Device (versions match stylo 0.19).
url = { version = "2", optional = true }
euclid = { version = "0.22", optional = true }
# The selector-matching trait (`selectors::Element`) our arena handle implements so
# Stylo's real matcher runs over the arena DOM. Version pinned to stylo 0.19's.
selectors = { version = "0.39", optional = true }
# `ElementState` (named in the TElement wall's `state()` signature) lives in the
# `stylo_dom` crate that stylo depends on; `app_units::Au` appears in a wall signature.
stylo_dom = { version = "0.19", optional = true }
app_units = { version = "0.7", optional = true }
# Lets us flip Stylo's `layout.grid.enabled` pref on (it defaults off under the `servo`
# feature, which drops `display:grid` at parse time). Same 0.19 version as stylo.
stylo_static_prefs = { version = "0.19", optional = true }

[dev-dependencies]
# N4 tests parse real HTML (declarative shadow DOM) to build the tree they scope over.
manuk-html.workspace = true
