[package]
name = "manuk-css"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Style engine. Trait boundary + minimal cascade fallback; Stylo feature-gated."

[features]
default = []
# Stylo (Servo/Firefox production CSS engine) is the reuse target per CLAUDE.md.
# It is heavy to build, so it is opt-in. The default build uses the minimal
# from-scratch cascade so the workspace compiles and runs without it.
stylo = ["dep:stylo", "dep:url", "dep:euclid", "dep:selectors", "dep:stylo_dom", "dep:app_units", "dep:stylo_static_prefs", "dep:stylo_traits", "dep:cssparser37", "dep:manuk-text"]

[dependencies]
manuk-dom.workspace = true
cssparser.workspace = true
smallvec.workspace = true
tracing.workspace = true

# Feature-gated. Pulled only with --features stylo. Name/version adjusted on wiring.
stylo = { package = "stylo", version = "0.19", optional = true }
# Real font metrics for the `ch` unit: the Device's FontMetricsProvider measures the
# `0`-glyph advance through the SAME shaper layout uses, so `Nch` matches N chars. Pulled
# only with --features stylo (the only path that builds a Stylo Device). Workspace-internal,
# no new external dependency; manuk-text does not depend on manuk-css, so no cycle.
manuk-text = { workspace = true, optional = true }
# Needed to construct Stylo's UrlExtraData + servo Device (versions match stylo 0.19).
url = { version = "2", optional = true }
euclid = { version = "0.22", optional = true }
# The selector-matching trait (`selectors::Element`) our arena handle implements so
# Stylo's real matcher runs over the arena DOM. Version pinned to stylo 0.19's.
selectors = { version = "0.39", optional = true }
# `ElementState` (named in the TElement wall's `state()` signature) lives in the
# `stylo_dom` crate that stylo depends on; `app_units::Au` appears in a wall signature.
stylo_dom = { version = "0.19", optional = true }
app_units = { version = "0.7", optional = true }
# Lets us flip Stylo's `layout.grid.enabled` pref on (it defaults off under the `servo`
# feature, which drops `display:grid` at parse time). Same 0.19 version as stylo.
stylo_static_prefs = { version = "0.19", optional = true }
# The `@container` supplement (stylo's servo build parses the at-rule only under its `gecko`
# feature — a cfg, not a pref, so rung 3 of the ladder applies): we lift the blocks from the
# sheet source ourselves and hand them to Stylo's own PUBLIC `ContainerCondition::parse` +
# `Stylesheet::from_str`. That needs `ParsingMode` (style_traits, published as stylo_traits)
# and stylo's cssparser generation (0.37 — the workspace `cssparser` is 0.34, a different
# type universe used by the fallback cascade's own value parser).
stylo_traits = { version = "0.19", optional = true }
cssparser37 = { package = "cssparser", version = "0.37", optional = true }

[dev-dependencies]
# N4 tests parse real HTML (declarative shadow DOM) to build the tree they scope over.
manuk-html.workspace = true
