[package]
name = "manuk-html"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTML parsing via html5ever, producing a manuk-dom tree."

[dependencies]
manuk-dom.workspace = true
html5ever.workspace = true
tendril.workspace = true
tracing.workspace = true
