[package]
name = "manuk-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "JS runtime boundary + Web API bindings. SpiderMonkey (mozjs) feature-gated."

[features]
default = []
# SpiderMonkey via mozjs, the same integration path Servo uses. NOT V8.
# Heavy C++ build, so opt-in. Default build uses NoScriptRuntime (no-op), which is
# spec-correct for the "no LLM/agent, GUI-only" phase and for tests.
#
# MODIFICATION BOUNDARY (CLAUDE.md §): this crate configures and BINDS to
# SpiderMonkey. It must never patch JIT/GC internals or the JS sandbox. That is a
# "come back to the human" boundary, not a "do it carefully" one.
#
# `spidermonkey` — full engine, matches mozjs's own defaults (jit + libz-sys + intl).
# `intl` pulls ICU (icu_capi), which is ~14MB of the SpiderMonkey footprint (BASELINE
# §8). With intl on + jit on, mozjs_sys links its PREBUILT archive (fast, no C++ build).
# `_sm` is the INTERNAL code marker both variants enable (all `#[cfg]`'d SpiderMonkey
# code gates on it, so the two variants share one code path and differ ONLY in `intl`).
_sm = ["dep:mozjs", "dep:getrandom", "dep:sha2", "dep:sha1"]
spidermonkey = ["_sm", "mozjs/jit", "mozjs/libz-sys", "mozjs/intl"]
# `spidermonkey-noicu` — C2 ICU trim. SAME embedding surface, minus the `intl` cargo
# feature, so ICU (icu_capi) is dropped. Disabling intl forces mozjs_sys to BUILD FROM
# SOURCE (no matching prebuilt archive), which needs clang + llvm + autoconf2.13 +
# cbindgen. Tradeoff: no `Intl` object / locale-aware collation/formatting (documented,
# acceptable for the size win). This is a SANCTIONED build-config flag on the published
# mozjs crate — it does NOT touch SpiderMonkey internals (within the boundary above).
# Use ONE of these two features (enabling both re-unions `intl` back on).
spidermonkey-noicu = ["_sm", "mozjs/jit", "mozjs/libz-sys"]

[dependencies]
tiny-skia.workspace = true
manuk-dom.workspace = true
manuk-css.workspace = true
manuk-net.workspace = true
serde_json.workspace = true
manuk-html.workspace = true
# N1/N2: the one SessionHistory model the History API binds to.
url.workspace = true
tracing.workspace = true

# Feature-gated. Pulled only with a `spidermonkey*` feature. `default-features = false`
# so the ICU-carrying `intl` default can be opted OUT of by `spidermonkey-noicu`;
# `spidermonkey` re-enables the full default set explicitly.
mozjs = { version = "0.18", optional = true, default-features = false }

# OS CSPRNG (`getrandom(2)` / `/dev/urandom` on Linux) behind `crypto.getRandomValues` and
# `crypto.randomUUID`. Optional + gated to `_sm`: it is only reachable from the SpiderMonkey
# native, so the JS-less build does not pull it. Without a host entropy call JS has no CSPRNG
# and the old shim leaked predictable `Math.random()` bytes into every token/nonce/UUID.
getrandom = { version = "0.3", optional = true }

# SubtleCrypto digests (`crypto.subtle.digest`, SHA-1/256/384/512). Pure-Rust RustCrypto hashes,
# optional + gated to `_sm` (only the SpiderMonkey native reaches them). SHA-1 is included because
# SubtleCrypto still exposes it (for verifying legacy signatures), even though it is not collision-safe.
sha2 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
