[package]
name = "manuk-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layout: taffy for flex/grid + from-scratch block/inline layout, WPT-verified."

[dependencies]
manuk-dom.workspace = true
manuk-css.workspace = true
manuk-text.workspace = true
taffy.workspace = true
smallvec.workspace = true
tracing.workspace = true
# UAX #14 line-breaking: the audited Unicode Line Breaking Algorithm (intra-word break
# opportunities — hyphens, soft-hyphens, ZWSP, CJK — that whitespace-splitting misses).
unicode-linebreak = "0.1"

[dev-dependencies]
manuk-html.workspace = true
