[package]
name = "manuk-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media container demux (ISO-BMFF / fragmented MP4). The plumbing under MSE — no codecs."

# BORROW, DO NOT BUILD (docs/loop/MEDIA.md). This crate's job is demux, buffer accounting and
# timeline arithmetic — the parts that are browser work. Decoding is a codec's job and a codec is
# never hand-written here.
#
# `re_mp4` (Rerun's fork of the `mp4` crate) is the box parser, chosen over the alternatives for one
# reason the trap-list in MEDIA.md records: it reads the *fragmented* case. `symphonia` leaves its
# ISO-MP4 video `SampleEntry` commented out (audio only); `mp4parse` is a box parser with no sample
# reader; `re_video` shells out to an ffmpeg *binary*. `re_mp4` walks `moof`/`traf`/`trun` and
# produces a real sample table, which is exactly what an MSE `SourceBuffer` needs.
[features]
# Demux is always available. DECODE is opt-in, and the split is not cosmetic — see below.
#
# `audio` is deliberately NOT in `default`. Cargo unifies features across a workspace build, so a
# default-on decoder ends up in every configuration that builds this crate at all — including the
# `--no-default-features` headless check on `manuk-shell`, a feature combination nothing else
# builds, which meant compiling symphonia from scratch on EVERY wall. That is ~100s per tick, on a
# gate whose whole job is to be cheap. Opt-in is what actually keeps it out of the link.
default = []
audio = ["dep:symphonia"]
# `video` is opt-in for the same reason `audio` is, and one more: openh264 compiles C. Leaving it
# on by default would put a `cc` invocation into every configuration that builds this crate.
video = ["dep:openh264"]
# AV1 decode (MEDIA.md tick 6). Same opt-in isolation as `video`: rav1d is a large compile that
# must never ride into the js/page gate lanes via feature unification.
av1 = ["video", "dep:re_rav1d"]
# AVIF stills (tick 355): the HEIF container walk for the AV1 keyframe the `av1` feature already
# decodes. avif-parse 1.x pinned: 2.x declares rust-version 1.90 (toolchain here is 1.88).
avif = ["av1", "dep:avif-parse"]

[dependencies]
re_mp4 = "0.4"
# AAC decode (M4). `default-features = false` + `aac` only: symphonia ships a dozen demuxers and
# codecs we must not silently acquire, and its ISO-MP4 demuxer in particular is AUDIO-ONLY (its
# video `SampleEntry` is commented out — MEDIA.md trap #1), which is exactly why demux is re_mp4's
# job here and symphonia's role is confined to turning AAC packets into PCM.
#
# **OPTIONAL, and that is load bearing.** `manuk-js` depends on this crate for `__mseDemux`, and
# `manuk-page` depends on `manuk-js`, so *every* gate test binary links whatever is in this
# dependency tree. Making the decoder unconditional put symphonia into all ~25 of them and added
# minutes to the wall — a real cost the RATCHET caught and refused, correctly. The JS boundary needs
# to know what a stream *contains*; it does not decode. So it takes this crate with
# `default-features = false` and the decoder stays out of its link.
# + mp3/mpa (tick 362): the RAW MPEG-audio stream reader + MP3 codec — `<audio src="x.mp3">` is a
# stream, not an MP4 track, so it needs symphonia's format probe, not re_mp4. MIT; patents expired.
symphonia = { version = "0.6", default-features = false, features = ["aac", "mp3", "mpa"], optional = true }

# H.264 decode (M5). Cisco's OpenH264, BSD-2, via idiomatic bindings.
#
# **It decodes Constrained Baseline and nothing else** — B-frame reordering is unimplemented — and
# that limit is the reason it is here rather than a reason against it. MEDIA.md's survey found no
# pure-Rust H.264 decoder that reads the High profile the open web actually serves, so the choice is
# not "openh264 vs something better", it is "a working pipeline with zero system dependencies, or
# nothing until ffmpeg/VA-API". Firefox makes the same call: OpenH264 for WebRTC, never for
# `<video>`. The `trait VideoDecoder` this module defines is what lets the High-profile backend drop
# in later without touching a caller.
#
# Optional for the same load-bearing reason symphonia is: `manuk-js` -> `manuk-media` puts this
# crate's tree into all ~25 gate binaries, and this one would drag a C compile with it.
#
# **Pinned exactly, and the pin is not cosmetic.** 0.9.1+ pulls `safe_arch 1.0`/`wide 1.5`, which
# declare `rust-version = 1.89`; this workspace is on 1.88, so the build fails at resolution with an
# MSRV error that names two SIMD crates and never mentions H.264 — a confusing failure a caret range
# would re-introduce on the next unrelated `cargo update`. Unpin when the toolchain moves past 1.89.
openh264 = { version = "=0.9.0", optional = true }

# AV1 decode. `re_rav1d` is the dav1d port WITH a Rust API (rav1d upstream is a C-ABI drop-in for
# libdav1d and exposes no Rust surface — MEDIA.md trap #3). BSD-2, pure Rust. Chosen per the
# observer's tick-235 provenance steer and MEDIA.md's ladder; also the eventual AVIF unlock.
# `default-features = false`: the default `asm` feature shells out to nasm at build time (not
# installed here, and a build-tool dependency the wall must not acquire). Pure-Rust paths only;
# 8-bit depth is what the web serves (10-bit AV1 exists but is not worth a 2x compile today).
re_rav1d = { version = "0.1.3", optional = true, default-features = false, features = ["bitdepth_8"] }

# AVIF container parse (Mozilla-lineage, MPL-2.0 — same license family as Stylo; parse only, no
# decode: the picture goes through the same re_rav1d path as <video>).
avif-parse = { version = "1.3", optional = true }
tracing.workspace = true

# The decode gate needs the decoder. `required-features` is what keeps `cargo test -p manuk-media`
# from failing to compile when the feature is off, while still running under `--features audio`.
[[test]]
name = "audio_decode"
required-features = ["audio"]

[[test]]
name = "mp3_decode"
required-features = ["audio"]

[[test]]
name = "video_decode"
required-features = ["video"]

[[test]]
name = "av1_decode"
required-features = ["av1"]

[[test]]
name = "playback_clock"
required-features = ["video"]

[[test]]
name = "av_sync"
required-features = ["audio", "video"]
